--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <ol>
     <li>
       Сканирует QR-код на столе<br>
-      <img src="scarqr img.png" alt="Скан QR-кода" style="width:240px; margin:20px;">
+      <img src="scarqr-img.png" alt="Скан QR-кода" style="width:240px; margin:20px;">
     </li>
     <li>
       Меню открывается на телефоне<br>
